--- a/masem.html
+++ b/masem.html
@@ -63,7 +63,7 @@ img {
 <div id="header">
 <h1 class="title">Examples of MASEM</h1>
 <h4 class="author"><em>Mike Cheung</em></h4>
-<h4 class="date"><em>12 May, 2015</em></h4>
+<h4 class="date"><em>22 May, 2015</em></h4>
 </div>
 
 <div id="TOC">
@@ -464,17 +464,17 @@ wls(Cov = pooledS, asyCov = tssem1.obj$acovS, n = sum(tssem1.obj$n),
 95% confidence intervals: z statistic approximation
 Coefficients:
           Estimate Std.Error    lbound    ubound z value Pr(&gt;|z|)    
-Alpha_A   0.512524  0.016390  0.480401  0.544647 31.2713   &lt;2e-16 ***
-Alpha_C   0.550048  0.015907  0.518872  0.581225 34.5798   &lt;2e-16 ***
-Alpha_ES  0.732091  0.020910  0.691108  0.773074 35.0113   &lt;2e-16 ***
-Beta_E    0.967545  0.054091  0.861529  1.073561 17.8874   &lt;2e-16 ***
-Beta_I    0.430459  0.025581  0.380321  0.480598 16.8271   &lt;2e-16 ***
-e1        0.737319  0.016635  0.704715  0.769922 44.3242   &lt;2e-16 ***
-e2        0.697447  0.017501  0.663145  0.731749 39.8510   &lt;2e-16 ***
-e3        0.464043  0.030488  0.404287  0.523799 15.2203   &lt;2e-16 ***
-e4        0.063856  0.107292 -0.146432  0.274144  0.5952   0.5517    
-e5        0.814705  0.021796  0.771985  0.857425 37.3778   &lt;2e-16 ***
-cor       0.349090  0.024372  0.301322  0.396857 14.3236   &lt;2e-16 ***
+Alpha_A   0.512524  0.018373  0.476514  0.548534 27.8959   &lt;2e-16 ***
+Alpha_C   0.550048  0.020627  0.509620  0.590477 26.6662   &lt;2e-16 ***
+Alpha_ES  0.732091  0.017625  0.697547  0.766635 41.5372   &lt;2e-16 ***
+Beta_E    0.967545  0.059923  0.850098  1.084993 16.1464   &lt;2e-16 ***
+Beta_I    0.430459  0.025650  0.380185  0.480733 16.7817   &lt;2e-16 ***
+e1        0.737319  0.019027  0.700027  0.774611 38.7514   &lt;2e-16 ***
+e2        0.697447  0.022756  0.652845  0.742049 30.6484   &lt;2e-16 ***
+e3        0.464043  0.025838  0.413402  0.514684 17.9598   &lt;2e-16 ***
+e4        0.063856  0.120054 -0.171446  0.299157  0.5319   0.5948    
+e5        0.814705  0.022042  0.771504  0.857906 36.9622   &lt;2e-16 ***
+cor       0.349090  0.031861  0.286644  0.411535 10.9568   &lt;2e-16 ***
 ---
 Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
 
@@ -510,17 +510,17 @@ wls(Cov = pooledS, asyCov = tssem1.obj$acovS, n = sum(tssem1.obj$n),
 95% confidence intervals: z statistic approximation
 Coefficients:
             Estimate   Std.Error      lbound      ubound z value  Pr(&gt;|z|)
-Alpha_A   7.4763e-01  2.4359e-02  6.9989e-01  7.9538e-01 30.6923 &lt; 2.2e-16
-Alpha_C   9.1196e-01  2.4961e-02  8.6303e-01  9.6088e-01 36.5355 &lt; 2.2e-16
-Alpha_ES  6.7721e-01  3.3755e-02  6.1105e-01  7.4337e-01 20.0625 &lt; 2.2e-16
-Beta_E    1.5232e-01  1.2624e-01 -9.5100e-02  3.9975e-01  1.2066 0.2275748
-Beta_I    3.2904e+00  1.6554e+01 -2.9155e+01  3.5736e+01  0.1988 0.8424427
-e1        4.4104e-01  3.6589e-02  3.6933e-01  5.1276e-01 12.0540 &lt; 2.2e-16
-e2        1.6834e-01  4.5296e-02  7.9557e-02  2.5711e-01  3.7164 0.0002021
-e3        5.4139e-01  4.5693e-02  4.5183e-01  6.3095e-01 11.8483 &lt; 2.2e-16
-e4        9.7680e-01  4.1783e-02  8.9490e-01  1.0587e+00 23.3781 &lt; 2.2e-16
-e5       -9.8269e+00  6.7998e+02 -1.3426e+03  1.3229e+03 -0.0145 0.9884697
-cor       1.1704e-01  9.7938e-02 -7.4910e-02  3.0900e-01  1.1951 0.2320530
+Alpha_A   7.4763e-01  1.0666e-01  5.3858e-01  9.5668e-01  7.0095 2.392e-12
+Alpha_C   9.1196e-01  1.3150e-01  6.5422e-01  1.1697e+00  6.9350 4.062e-12
+Alpha_ES  6.7721e-01  1.0071e-01  4.7981e-01  8.7460e-01  6.7241 1.767e-11
+Beta_E    1.5232e-01  2.5838e+00 -4.9119e+00  5.2165e+00  0.0590    0.9530
+Beta_I    3.2904e+00  1.5444e+01 -2.6979e+01  3.3560e+01  0.2131    0.8313
+e1        4.4104e-01  8.3452e-02  2.7748e-01  6.0461e-01  5.2850 1.257e-07
+e2        1.6834e-01  1.2552e-01 -7.7674e-02  4.1435e-01  1.3411    0.1799
+e3        5.4139e-01  7.7270e-02  3.8994e-01  6.9284e-01  7.0065 2.444e-12
+e4        9.7680e-01  4.7883e+01 -9.2873e+01  9.4826e+01  0.0204    0.9837
+e5       -9.8269e+00  6.1333e+02 -1.2119e+03  1.1923e+03 -0.0160    0.9872
+cor       1.1704e-01  1.7362e+01 -3.3912e+01  3.4146e+01  0.0067    0.9946
             
 Alpha_A  ***
 Alpha_C  ***
@@ -528,9 +528,9 @@ Alpha_ES ***
 Beta_E      
 Beta_I      
 e1       ***
-e2       ***
+e2          
 e3       ***
-e4       ***
+e4          
 e5          
 cor         
 ---
@@ -591,32 +591,32 @@ Coefficients:
 Intercept1   3.9465e-01  5.4223e-02  2.8837e-01  5.0092e-01  7.2782
 Intercept2   4.4009e-01  4.1258e-02  3.5923e-01  5.2096e-01 10.6668
 Intercept3   5.4542e-02  6.1715e-02 -6.6418e-02  1.7550e-01  0.8838
-Intercept4   9.8668e-02  4.6219e-02  8.0813e-03  1.8925e-01  2.1348
-Intercept5   4.2966e-01  4.0156e-02  3.5096e-01  5.0836e-01 10.6999
+Intercept4   9.8668e-02  4.6219e-02  8.0815e-03  1.8926e-01  2.1348
+Intercept5   4.2966e-01  4.0156e-02  3.5096e-01  5.0837e-01 10.6999
 Intercept6   1.2851e-01  4.0816e-02  4.8514e-02  2.0851e-01  3.1486
 Intercept7   2.0526e-01  4.9591e-02  1.0806e-01  3.0245e-01  4.1390
-Intercept8   2.3994e-01  3.1924e-02  1.7737e-01  3.0250e-01  7.5159
+Intercept8   2.3994e-01  3.1924e-02  1.7737e-01  3.0251e-01  7.5159
 Intercept9   1.8910e-01  4.3014e-02  1.0480e-01  2.7341e-01  4.3963
-Intercept10  4.4413e-01  3.2547e-02  3.8034e-01  5.0792e-01 13.6460
-Tau2_1_1     3.7207e-02  1.5000e-02  7.8079e-03  6.6607e-02  2.4805
+Intercept10  4.4413e-01  3.2547e-02  3.8034e-01  5.0792e-01 13.6461
+Tau2_1_1     3.7207e-02  1.5000e-02  7.8079e-03  6.6606e-02  2.4805
 Tau2_2_2     2.0305e-02  8.4348e-03  3.7735e-03  3.6837e-02  2.4073
-Tau2_3_3     4.8219e-02  1.9723e-02  9.5631e-03  8.6876e-02  2.4448
+Tau2_3_3     4.8219e-02  1.9723e-02  9.5631e-03  8.6875e-02  2.4448
 Tau2_4_4     2.4610e-02  1.0624e-02  3.7872e-03  4.5433e-02  2.3164
 Tau2_5_5     1.8725e-02  8.2474e-03  2.5602e-03  3.4889e-02  2.2704
 Tau2_6_6     1.8256e-02  8.7889e-03  1.0301e-03  3.5482e-02  2.0772
-Tau2_7_7     2.9424e-02  1.2263e-02  5.3893e-03  5.3458e-02  2.3995
-Tau2_8_8     9.6510e-03  4.8824e-03  8.1687e-05  1.9220e-02  1.9767
-Tau2_9_9     2.0933e-02  9.1280e-03  3.0429e-03  3.8824e-02  2.2933
-Tau2_10_10   1.1151e-02  5.0467e-03  1.2591e-03  2.1042e-02  2.2095
+Tau2_7_7     2.9424e-02  1.2263e-02  5.3894e-03  5.3458e-02  2.3995
+Tau2_8_8     9.6509e-03  4.8824e-03  8.1667e-05  1.9220e-02  1.9767
+Tau2_9_9     2.0933e-02  9.1280e-03  3.0430e-03  3.8824e-02  2.2933
+Tau2_10_10   1.1150e-02  5.0467e-03  1.2591e-03  2.1042e-02  2.2095
              Pr(&gt;|z|)    
 Intercept1  3.384e-13 ***
 Intercept2  &lt; 2.2e-16 ***
-Intercept3   0.376823    
+Intercept3   0.376820    
 Intercept4   0.032776 *  
 Intercept5  &lt; 2.2e-16 ***
 Intercept6   0.001641 ** 
 Intercept7  3.488e-05 ***
-Intercept8  5.662e-14 ***
+Intercept8  5.640e-14 ***
 Intercept9  1.101e-05 ***
 Intercept10 &lt; 2.2e-16 ***
 Tau2_1_1     0.013120 *  
@@ -624,15 +624,15 @@ Tau2_2_2     0.016069 *
 Tau2_3_3     0.014492 *  
 Tau2_4_4     0.020535 *  
 Tau2_5_5     0.023184 *  
-Tau2_6_6     0.037786 *  
-Tau2_7_7     0.016420 *  
-Tau2_8_8     0.048076 *  
+Tau2_6_6     0.037785 *  
+Tau2_7_7     0.016419 *  
+Tau2_8_8     0.048077 *  
 Tau2_9_9     0.021829 *  
-Tau2_10_10   0.027143 *  
+Tau2_10_10   0.027142 *  
 ---
 Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
 
-Q statistic on the homogeneity of effect sizes: 2381.011
+Q statistic on the homogeneity of effect sizes: 2381
 Degrees of freedom of the Q statistic: 130
 P value of the Q statistic: 0
 
@@ -653,22 +653,22 @@ Number of studies (or clusters): 14
 Number of observed statistics: 140
 Number of estimated parameters: 20
 Degrees of freedom: 120
--2 log likelihood: -110.8456 
+-2 log likelihood: -110.8455 
 OpenMx status1: 0 (&quot;0&quot; or &quot;1&quot;: The optimization is considered fine.
 Other values indicate problems.)</code></pre>
 <p>The pooled correlation coefficients (fixed effects) and the variance components (the random effects) can be extracted by the use of the <code>coef()</code> command via the <code>select</code> argument.</p>
 <pre class="r"><code>## Fixed effects
 coef(random1, select=&quot;fixed&quot;)</code></pre>
 <pre><code> Intercept1  Intercept2  Intercept3  Intercept4  Intercept5  Intercept6 
- 0.39464571  0.44009386  0.05454205  0.09866796  0.42966156  0.12851203 
+ 0.39464601  0.44009394  0.05454236  0.09866832  0.42966190  0.12851244 
  Intercept7  Intercept8  Intercept9 Intercept10 
- 0.20525658  0.23993559  0.18910279  0.44413307 </code></pre>
+ 0.20525706  0.23993592  0.18910327  0.44413322 </code></pre>
 <pre class="r"><code>## Random effects
 coef(random1, select=&quot;random&quot;)</code></pre>
 <pre><code>   Tau2_1_1    Tau2_2_2    Tau2_3_3    Tau2_4_4    Tau2_5_5    Tau2_6_6 
-0.037207248 0.020305284 0.048219304 0.024610145 0.018724820 0.018256056 
+0.037207113 0.020305357 0.048219255 0.024610270 0.018724847 0.018256033 
    Tau2_7_7    Tau2_8_8    Tau2_9_9  Tau2_10_10 
-0.029423821 0.009650996 0.020933450 0.011150519 </code></pre>
+0.029423895 0.009650927 0.020933476 0.011150498 </code></pre>
 </div>
 <div id="stage-2-analysis-2" class="section level3">
 <h3>Stage 2 analysis</h3>
@@ -692,7 +692,7 @@ Alpha_C   0.59010        NA 0.49047 0.69487      NA       NA
 Alpha_ES  0.77046        NA 0.65994 0.90431      NA       NA
 Beta_E    0.69340        NA 0.56258 0.87183      NA       NA
 Beta_I    0.64011        NA 0.50833 0.78644      NA       NA
-e1        0.67219        NA 0.54176 0.77561      NA       NA
+e1        0.67218        NA 0.54176 0.77561      NA       NA
 e2        0.65178        NA 0.51711 0.75944      NA       NA
 e3        0.40640        NA 0.18193 0.56452      NA       NA
 e4        0.51919        NA 0.23937 0.68352      NA       NA
@@ -707,7 +707,7 @@ DF of target model                            4.0000
 p value of target model                       0.0745
 Number of constraints imposed on &quot;Smatrix&quot;    5.0000
 DF manually adjusted                          0.0000
-Chi-square of independence model            514.5607
+Chi-square of independence model            514.5612
 DF of independence model                     10.0000
 RMSEA                                         0.0158
 SRMR                                          0.0463
@@ -1135,12 +1135,12 @@ meta(y = ES, v = acovR, RE.constraints = Diag(x = paste(RE.startvalues,
 95% confidence intervals: z statistic approximation
 Coefficients:
               Estimate   Std.Error      lbound      ubound z value
-Intercept1  3.7078e-01  3.6894e-02  2.9846e-01  4.4309e-01 10.0497
+Intercept1  3.7078e-01  3.6894e-02  2.9846e-01  4.4309e-01 10.0496
 Intercept2  4.3160e-01  7.7260e-02  2.8018e-01  5.8303e-01  5.5864
-Intercept3  2.0294e-01  4.6494e-02  1.1182e-01  2.9407e-01  4.3650
-Tau2_1_1    1.0000e-10  4.8927e-03 -9.5895e-03  9.5895e-03  0.0000
-Tau2_2_2    4.7468e-02  2.6207e-02 -3.8972e-03  9.8833e-02  1.8113
-Tau2_3_3    5.1624e-03  9.7471e-03 -1.3942e-02  2.4266e-02  0.5296
+Intercept3  2.0294e-01  4.6493e-02  1.1182e-01  2.9407e-01  4.3650
+Tau2_1_1    1.0000e-10  4.8927e-03 -9.5896e-03  9.5896e-03  0.0000
+Tau2_2_2    4.7467e-02  2.6207e-02 -3.8973e-03  9.8832e-02  1.8113
+Tau2_3_3    5.1621e-03  9.7470e-03 -1.3942e-02  2.4266e-02  0.5296
             Pr(&gt;|z|)    
 Intercept1 &lt; 2.2e-16 ***
 Intercept2 2.319e-08 ***
@@ -1151,9 +1151,9 @@ Tau2_3_3      0.5964
 ---
 Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
 
-Q statistic on the homogeneity of effect sizes: 81.65944
+Q statistic on the homogeneity of effect sizes: 81.65888
 Degrees of freedom of the Q statistic: 27
-P value of the Q statistic: 2.111299e-07
+P value of the Q statistic: 2.111713e-07
 
 Heterogeneity indices (based on the estimated Tau2):
                              Estimate
@@ -1165,15 +1165,15 @@ Number of studies (or clusters): 10
 Number of observed statistics: 30
 Number of estimated parameters: 6
 Degrees of freedom: 24
--2 log likelihood: -23.64423 
+-2 log likelihood: -23.64433 
 OpenMx status1: 0 (&quot;0&quot; or &quot;1&quot;: The optimization is considered fine.
 Other values indicate problems.)</code></pre>
 <pre class="r"><code>coef(random1, select=&quot;fixed&quot;)</code></pre>
 <pre><code>Intercept1 Intercept2 Intercept3 
- 0.3707767  0.4316035  0.2029438 </code></pre>
+ 0.3707762  0.4316036  0.2029437 </code></pre>
 <pre class="r"><code>coef(random1, select=&quot;random&quot;)</code></pre>
 <pre><code>    Tau2_1_1     Tau2_2_2     Tau2_3_3 
-0.0000000001 0.0474676836 0.0051624015 </code></pre>
+0.0000000001 0.0474672863 0.0051621367 </code></pre>
 </div>
 <div id="stage-2-analysis-5" class="section level3">
 <h3>Stage 2 analysis</h3>
@@ -1192,7 +1192,7 @@ wls(Cov = pooledS, asyCov = asyCov, n = tssem1.obj$total.n, Amatrix = Amatrix,
 95% confidence intervals: Likelihood-based statistic
 Coefficients:
                         Estimate Std.Error  lbound  ubound z value
-Spatial2Math             0.29535        NA 0.21440 0.37407      NA
+Spatial2Math             0.29535        NA 0.21440 0.37406      NA
 Verbal2Math              0.37166        NA 0.21310 0.52956      NA
 ErrorVarMath             0.73008        NA 0.59027 0.83046      NA
 CorBetweenSpatialVerbal  0.20294        NA 0.11175 0.29414      NA
